         | C      O   O  N N N  Q   Q  U   U  EEE     SSS     T   |
         | C   C  O   O  N  NN  Q  Q   U   U  E          S    T   |
         |  CCC    OOO   N   N   QQ Q   UUU   EEEEE  SSSS     T   |
         +--------------------------------------------------------+

                              Conquest HISTORY

??? 10/05/2007

  - tcpwrap.c: only log successful connections if verbose/debug is
    specified. 

8.3 (stable) 09/03/2007

  - 8.3 stable release.  We hope.  The main features for this release are: 

  - Sound support. This version of conquest updates the GL client to
    support sound via SDL and SDL_mixer.  A wide variety of effects
    and sounds are now provided.  No more of that insipid X11 beeping.

    Cat provided the original patch and samples adding this support,
    though it was completely rewritten using a new internal cqs* API
    within conquest, and is configurable via CQI config files (soundrc).

    The conquest distribution includes the sounds used for the
    effects.

    An optional musicpak tarball is available seperately, due to it's
    size.  To use it, simply unpack the musicpak tarball into your
    ~/.conquest/ directory.

    To use sound support, you must have SDL and SDL_Mixer libraries
    and headers.  

  - The ability to zoom in and out in SR/LR scan was added to the GL
    client, based loosely on a patch from Cat.  You can zoom in or out
    in +/- 5 steps (magfactors) in either LR or SR scan.

  - In addition, several changes and improvements have taken place
    regarding rendering in the GL client:

    - The HUD is laid out a little differently (and more configurably)
      via CQI.

    - The VBG and NEB are rendered better (scaling and appearence).

    - A large number of scaling bugs were fixed.

    - A crosshair cursor is now used in the GL client.    

    - The torp pips have been relocated next to the phaser recharge
      indicator.

    - explosions are now visible in LR scan.
